@@ -861,10 +861,18 @@ static int __init fuse_fs_init(void)
 	if (err)
 		goto out_unreg;
 
+#ifdef KERNEL_2_6_23_PLUS
+	fuse_inode_cachep = kmem_cache_create("fuse_inode",
+					      sizeof(struct fuse_inode),
+					      0, SLAB_HWCACHE_ALIGN,
+					      fuse_inode_init_once);
+#else
 	fuse_inode_cachep = kmem_cache_create("fuse_inode",
 					      sizeof(struct fuse_inode),
 					      0, SLAB_HWCACHE_ALIGN,
 					      fuse_inode_init_once, NULL);
+#endif
+
 	err = -ENOMEM;
 	if (!fuse_inode_cachep)
 		goto out_unreg2;
