@@ -3,6 +3,9 @@
 	* Add missing context initialization in fuse_fs_chmod().  Bug
 	found by "iohead"
 
+	* Fix kernel module compilation for 2.6.23.  Based on patch by
+	Marian Marinov
+
 2007-09-04  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* lib/fuse_lowlevel.c: fix a fuse_req leak in do_forget()
